# ML_system_template

./: .cookiecutterignore  Makefile  README.md  __init__.py  cookiecutter.json  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py
app/models/: model.py  model_config.json
app/services/: inference.py
{{cookiecutter.project_slug}}/: .flake8  README.md  create_file.txt  docker-compose.yml  main.py
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/app/: __init__.py  create_model.py  main.py
{{cookiecutter.project_slug}}/app/api/: routes.py
{{cookiecutter.project_slug}}/app/models/: model.py
{{cookiecutter.project_slug}}/app/services/: inference.py
{{cookiecutter.project_slug}}/tests/: test_api.py
