[project]
name = "ml-system-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "fastapi[all,standard,uvicorn]>=0.121.1",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=9.0.0",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
